--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,43 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/flickity/2.0.5/flickity.pkgd.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flickity/2.0.5/flickity.min.css">
     <title>Guar</title>
 </head>
 
 <body>
-
+    <div class="page">
+        <div class="header"></div>
+        <div class="hero">
+            <div class="hero-slider" data-carousel>
+                <div class="carousel-cell" style="background-image:url(https://68.media.tumblr.com/57836ee52bc9355ad7c5fed5abf91ccc/tumblr_oiboo6MaRS1slhhf0o1_1280.jpg);">
+                    <div class="overlay"></div>
+                    <div class="inner">
+                        <h3 class="subtitle">Slide 1</h3>
+                        <h2 class="title">Flickity Parallax</h2>
+                        <a href="https://flickity.metafizzy.co/" target="_blank" class="btn">Tell me more</a>
+                    </div>
+                </div>
+                <div class="carousel-cell" style="background-image:url(https://68.media.tumblr.com/c40636a5a0d4aa39c335c8db40d2144f/tumblr_omc7z7Xv8N1slhhf0o1_1280.jpg);">
+                    <div class="overlay"></div>
+                    <div class="inner">
+                        <h3 class="subtitle">Slide 2</h3>
+                        <h2 class="title">Flickity Parallax</h2>
+                        <a href="https://flickity.metafizzy.co/" target="_blank" class="btn">Tell me more</a>
+                    </div>
+                </div>
+                <div class="carousel-cell" style="background-image:url(https://68.media.tumblr.com/3beb13a4167aa8b5c4743eac17bf351c/tumblr_o8nyvtiHfC1slhhf0o1_1280.jpg);">
+                    <div class="overlay"></div>
+                    <div class="inner">
+                        <h3 class="subtitle">Slide 3</h3>
+                        <h2 class="title">Flickity Parallax</h2>
+                        <a href="https://flickity.metafizzy.co/" target="_blank" class="btn">Tell me more</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
