--- a/src/index.html
+++ b/src/index.html
@@ -12,15 +12,27 @@
 
 <body>
     <div class="page">
-        <div class="header"></div>
+        <header class="header">
+            <div class="logo">
+                <a href="index.html"><img class="logo" src="../src/img/logo.png"></a>
+            </div>
+            <nav class="header__nav">
+                <ul>
+                    <li><a href="#">О Нас</a></li>
+                    <li><a href="#">Направления</a></li>
+                    <li><a href="#">Цены</a></li>
+                    <li><a href="#">Контакты</a></li>
+                </ul>
+            </nav>
+        </header>
         <div class="hero">
             <div class="hero-slider" data-carousel>
                 <div class="carousel-cell slide__01" style="background:url(../src/img/slider1.png);">
                     <div class="overlay"></div>
                     <div class="inner">
-                        <h3 class="subtitle">Slide 1</h3>
-                        <h2 class="title">Flickity Parallax</h2>
-                        <a href="https://flickity.metafizzy.co/" target="_blank" class="btn">Tell me more</a>
+                        <h3 class="subtitle">Shree Ram Industries</h3>
+                        <h2 class="title">Агропереработка и <br/>производство Гуаровой камеди</h2>
+                        <a href="https://flickity.metafizzy.co/" target="_blank" class="btn">Узнать больше</a>
                     </div>
                 </div>
                 <div class="carousel-cell" style="background-image:url(../src/img/slider2.png);">
@@ -54,6 +66,20 @@
                         <h2 class="title">Flickity Parallax</h2>
                         <a href="https://flickity.metafizzy.co/" target="_blank" class="btn">Tell me more</a>
                     </div>
+                </div>
+            </div>
+        </div>
+        <div class="about-wrapper" id="about">
+            <div class="about">
+                <h2 class="about__title">О Нас</h2>
+                <div class="about-inner-wrapper">
+                    <div class="about__text">
+                        <p>В нашем парке большое количество специальных эвакуаторов, предназначенных для работы в сложных условиях закрытых гаражей и стоянок. Каждый эвакуатор оснащен всем необходимым оборудованием для работы на паркинге, таким как подкатные
+                            тележки для полностью заблокированных автомобилей, гидравлическая лебедка, стяжные ремни и другое оборудование, необходимое для успешной эвакуации неисправного автомобиля со стоянки. Обращаясь в нашу компанию Вы получите высокое
+                            качество работы решение Вашей проблемы! Ведь эвакуация поломавшегося автомобиля из паркинга это сложная работа, требующая специального оборудования, которое есть в наличии в нашей службе.
+                        </p>
+                    </div>
+                    <div class="about__img"><img src="../src/img/map.png" class="about__img" alt="aboutimg"></div>
                 </div>
             </div>
         </div>
