--- a/src/index.html
+++ b/src/index.html
@@ -74,9 +74,9 @@
                 <h2 class="about__title">О Нас</h2>
                 <div class="about-inner-wrapper">
                     <div class="about__text">
-                        <p>В нашем парке большое количество специальных эвакуаторов, предназначенных для работы в сложных условиях закрытых гаражей и стоянок. Каждый эвакуатор оснащен всем необходимым оборудованием для работы на паркинге, таким как подкатные
-                            тележки для полностью заблокированных автомобилей, гидравлическая лебедка, стяжные ремни и другое оборудование, необходимое для успешной эвакуации неисправного автомобиля со стоянки. Обращаясь в нашу компанию Вы получите высокое
-                            качество работы решение Вашей проблемы! Ведь эвакуация поломавшегося автомобиля из паркинга это сложная работа, требующая специального оборудования, которое есть в наличии в нашей службе.
+                        <p>ShreeRamIndustries - начав с одного небольшого завода, сейчас это производственный центр для изготовления нескольких видов продукции, Постоянно развивается и имеет всемирную репутацию надежного поставщика.
+                            <br />
+                            <br /> Мы занимается многоотраслевым бизнесом более чем в 15 странах мира и имеем больше 35 лет опыта , Начиная отсельскохозяйственной сферы и продукции из гуара и заканчивая промышленными товарами и услугами.
                         </p>
                     </div>
                     <div class="about__img"><img src="../src/img/map.png" class="about__img" alt="aboutimg"></div>
