--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flickity/2.0.5/flickity.pkgd.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flickity/2.0.5/flickity.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js" type="text/javascript"></script>
     <title>Guar</title>
 </head>
 
@@ -31,7 +32,7 @@
                     <div class="overlay"></div>
                     <div class="inner">
                         <h3 class="subtitle">Shree Ram Industries</h3>
-                        <h2 class="title">Агропереработка и <br/>производство Гуаровой камеди</h2>
+                        <h2 class="title">Агропереработка и <br />производство Гуаровой камеди</h2>
                         <a href="https://flickity.metafizzy.co/" target="_blank" class="btn">Узнать больше</a>
                     </div>
                 </div>
@@ -71,7 +72,7 @@
         </div>
         <div class="about-wrapper" id="about">
             <div class="about">
-                <h2 class="about__title">О Нас</h2>
+                <h2 class="about__title">О НAC</h2>
                 <div class="about-inner-wrapper">
                     <div class="about__text">
                         <p>ShreeRamIndustries - начав с одного небольшого завода, сейчас это производственный центр для изготовления нескольких видов продукции, Постоянно развивается и имеет всемирную репутацию надежного поставщика.
@@ -80,6 +81,49 @@
                         </p>
                     </div>
                     <div class="about__img"><img src="../src/img/map.png" class="about__img" alt="aboutimg"></div>
+                </div>
+            </div>
+        </div>
+        <div class="tabs-wrapper" id="tabs">
+            <div class="tabs">
+                <h2 class="tabs__title">ОСНОВНЫЕ НАПРАВЛЕНИЯ</h2>
+                <div class="tabs-inner-wrapper">
+                    <button class="accordion"><img src="../src/img/01.png">Нефтяная промышленность<img
+                            src="../src/img/icon01.png"></button>
+                    <div class="panel ">
+                        <p>При использовании во время бурения нефтяных скважин гуаровая камедь предотвращает потерю воды из вязкого бурового раствора и хорошо суспензирует бентонитовую глину, используемую в буровом растворе.
+                            <br> Гуаровая камедь дешевле, чем большинство других загустителей бурового раствора, однако менее термостабильна, чем ксантановая камедь, при температурах выше 100 градусов С. В значительной мере это ограничение удаётся преодолеть
+                            при использовании её гидроксипропильных производных, которые являются более термостабильными.
+                            <br> Для повышения добычи нефти посредством гидравлического разрыва пласта в скважину под давлением закачивают расклинивающее средство, например, песок, суспензированный в загущённом гуаром или гидроксипропилгуаром растворе,
+                            с целью создания и расширения трещин в горных породах и обеспечения просачивания нефти/газа в скважину.
+                            <br> За счёт образования поперечных связей с боратом или ионами переходных металлов, Zr и Ti, часто происходит желатинизация in situ инъецированной гуаровой камеди. После завершения гидравлического разрыва гель разрушают и
+                            вымывают, причём после разрушения остаётся минимальное его количество. Применение в области добычи нефти является одним из основных применений гуаровой камеди.
+                        </p>
+                    </div>
+                    <button class="accordion"><img src="../src/img/02.png">Нефтяная промышленность<img
+                        src="../src/img/icon02.png"></button>
+                    <div class="panel ">
+                        <p>При использовании во время бурения нефтяных скважин гуаровая камедь предотвращает потерю воды из вязкого бурового раствора и хорошо суспензирует бентонитовую глину, используемую в буровом растворе.
+                            <br> Гуаровая камедь дешевле, чем большинство других загустителей бурового раствора, однако менее термостабильна, чем ксантановая камедь, при температурах выше 100 градусов С. В значительной мере это ограничение удаётся преодолеть
+                            при использовании её гидроксипропильных производных, которые являются более термостабильными.
+                            <br> Для повышения добычи нефти посредством гидравлического разрыва пласта в скважину под давлением закачивают расклинивающее средство, например, песок, суспензированный в загущённом гуаром или гидроксипропилгуаром растворе,
+                            с целью создания и расширения трещин в горных породах и обеспечения просачивания нефти/газа в скважину.
+                            <br> За счёт образования поперечных связей с боратом или ионами переходных металлов, Zr и Ti, часто происходит желатинизация in situ инъецированной гуаровой камеди. После завершения гидравлического разрыва гель разрушают и
+                            вымывают, причём после разрушения остаётся минимальное его количество. Применение в области добычи нефти является одним из основных применений гуаровой камеди.
+                        </p>
+                    </div>
+                    <button class="accordion"><img src="../src/img/03.png">Нефтяная промышленность<img
+                    src="../src/img/icon03.png"></button>
+                    <div class="panel ">
+                        <p>При использовании во время бурения нефтяных скважин гуаровая камедь предотвращает потерю воды из вязкого бурового раствора и хорошо суспензирует бентонитовую глину, используемую в буровом растворе.
+                            <br> Гуаровая камедь дешевле, чем большинство других загустителей бурового раствора, однако менее термостабильна, чем ксантановая камедь, при температурах выше 100 градусов С. В значительной мере это ограничение удаётся преодолеть
+                            при использовании её гидроксипропильных производных, которые являются более термостабильными.
+                            <br> Для повышения добычи нефти посредством гидравлического разрыва пласта в скважину под давлением закачивают расклинивающее средство, например, песок, суспензированный в загущённом гуаром или гидроксипропилгуаром растворе,
+                            с целью создания и расширения трещин в горных породах и обеспечения просачивания нефти/газа в скважину.
+                            <br> За счёт образования поперечных связей с боратом или ионами переходных металлов, Zr и Ti, часто происходит желатинизация in situ инъецированной гуаровой камеди. После завершения гидравлического разрыва гель разрушают и
+                            вымывают, причём после разрушения остаётся минимальное его количество. Применение в области добычи нефти является одним из основных применений гуаровой камеди.
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
