--- a/src/index.html
+++ b/src/index.html
@@ -100,19 +100,16 @@
                             вымывают, причём после разрушения остаётся минимальное его количество. Применение в области добычи нефти является одним из основных применений гуаровой камеди.
                         </p>
                     </div>
-                    <button class="accordion"><img src="../src/img/02.png">Нефтяная промышленность<img
+                    <button class="accordion"><img src="../src/img/02.png">Пищевая промышленность<img
                         src="../src/img/icon02.png"></button>
                     <div class="panel ">
-                        <p>При использовании во время бурения нефтяных скважин гуаровая камедь предотвращает потерю воды из вязкого бурового раствора и хорошо суспензирует бентонитовую глину, используемую в буровом растворе.
-                            <br> Гуаровая камедь дешевле, чем большинство других загустителей бурового раствора, однако менее термостабильна, чем ксантановая камедь, при температурах выше 100 градусов С. В значительной мере это ограничение удаётся преодолеть
-                            при использовании её гидроксипропильных производных, которые являются более термостабильными.
-                            <br> Для повышения добычи нефти посредством гидравлического разрыва пласта в скважину под давлением закачивают расклинивающее средство, например, песок, суспензированный в загущённом гуаром или гидроксипропилгуаром растворе,
-                            с целью создания и расширения трещин в горных породах и обеспечения просачивания нефти/газа в скважину.
-                            <br> За счёт образования поперечных связей с боратом или ионами переходных металлов, Zr и Ti, часто происходит желатинизация in situ инъецированной гуаровой камеди. После завершения гидравлического разрыва гель разрушают и
-                            вымывают, причём после разрушения остаётся минимальное его количество. Применение в области добычи нефти является одним из основных применений гуаровой камеди.
+                        <p>Гуаровая камедь относится к полисахаридам, хорошо растворяется в воде. Представляет собой полимерное соединение, устойчивое к температурным изменениям. Свойства добавки: поглощает воду и образовывает вязкую структуру; препятствует
+                            кристаллизации при охлаждении и заморозке; улучшает органолептические характеристики товара; увеличивает объем и эластичность продукта; выполняет роль фиксирующего и связывающего агента; способствует увеличению срока годности.
+                            Е412 используется при производстве следующей продукции: мороженое, охлажденные кондитерские десерты из молочных продуктов; хлебобулочные изделия и выпечка; мясная и колбасная продукция; джемы, варенья, желе; кетчупы, соусы,
+                            майонезы; масло; полуфабрикаты и продукты быстрого приготовления (сухие супы, консервы, пищевые концентраты); соки, концентраты.
                         </p>
                     </div>
-                    <button class="accordion"><img src="../src/img/03.png">Нефтяная промышленность<img
+                    <button class="accordion"><img src="../src/img/03.png">Корма для животных<img
                     src="../src/img/icon03.png"></button>
                     <div class="panel ">
                         <p>При использовании во время бурения нефтяных скважин гуаровая камедь предотвращает потерю воды из вязкого бурового раствора и хорошо суспензирует бентонитовую глину, используемую в буровом растворе.
