--- a/src/index.html
+++ b/src/index.html
@@ -124,6 +124,21 @@
                 </div>
             </div>
         </div>
+        <div class="price__wrapper">
+            <div class="price">
+                <h2 class="price__title">ЦЕНЫ</h2>
+                <div class="price-inner-wrapper">
+                    <div class="price__card">
+                        <div class="card__img"><img src="../src/img/card1.png"></div>
+                        <div class="card__text">
+                            <h3 class="card__title">Гуаровая камедь</h3>
+                            <div class="card__price">$10/1кг</div>
+                            <a><button>Купить</button></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 
