card styles and fixes

--- a/src/index.html
+++ b/src/index.html
@@ -133,7 +133,15 @@
                         <div class="card__text">
                             <h3 class="card__title">Гуаровая камедь</h3>
                             <div class="card__price">$10/1кг</div>
-                            <a><button>Купить</button></a>
+                            <a><button class="card__button">Купить</button></a>
+                        </div>
+                    </div>
+                    <div class="price__card">
+                        <div class="card__img"><img src="../src/img/card2.png"></div>
+                        <div class="card__text">
+                            <h3 class="card__title">Семена Гуара</h3>
+                            <div class="card__price">$30/1кг</div>
+                            <a><button class="card__button">Купить</button></a>
                         </div>
                     </div>
                 </div>
