cert block desktop

--- a/src/index.html
+++ b/src/index.html
@@ -145,6 +145,22 @@
                         </div>
                     </div>
                 </div>
+                <p class="price__desc">Цены действительны на 12.10.2021 17:47</p>
+            </div>
+        </div>
+        <div class="cert__wrapper">
+            <div class="cert">
+                <h2 class="cert__title">СЕРТИФИКАТЫ</h2>
+                <div class="cert-inner-wrapper">
+                    <div class="cert-carousel" data-flickity='{ "cellAlign": "left", "contain": true, "groupSells":true }'>
+                        <div class="cert-carousel-cell"><img src="../src/img/cert1.png"></div>
+                        <div class="cert-carousel-cell"><img src="../src/img/cert2.png"></div>
+                        <div class="cert-carousel-cell"><img src="../src/img/cert3.png"></div>
+                        <div class="cert-carousel-cell"><img src="../src/img/cert4.png"></div>
+                        <div class="cert-carousel-cell"><img src="../src/img/cert5.png"></div>
+
+                    </div>
+                </div>
             </div>
         </div>
     </div>
