--- a/src/index.html
+++ b/src/index.html
@@ -158,9 +158,25 @@
                         <div class="cert-carousel-cell"><img src="../src/img/cert3.png"></div>
                         <div class="cert-carousel-cell"><img src="../src/img/cert4.png"></div>
                         <div class="cert-carousel-cell"><img src="../src/img/cert5.png"></div>
-
                     </div>
                 </div>
+            </div>
+        </div>
+        <div class="contacts__wrapper">
+            <div class="contacts">
+                <h2 class="contacts__title">КОНТАКТЫ</h2>
+                <div class="contacts-inner-wrapper">
+                    <div class="form__wrapper">
+                        <form class="contacts__form">
+                            <input>
+                            <input>
+                            <input>
+                            <button></button>
+                        </form>
+                    </div>
+                    <div class="contacts__img"><img src="../src/img/contacts.png"></div>
+                </div>
+
             </div>
         </div>
     </div>
