--- a/src/index.html
+++ b/src/index.html
@@ -103,22 +103,23 @@
                     <button class="accordion"><img src="../src/img/02.png">Пищевая промышленность<img
                         src="../src/img/icon02.png"></button>
                     <div class="panel ">
-                        <p>Гуаровая камедь относится к полисахаридам, хорошо растворяется в воде. Представляет собой полимерное соединение, устойчивое к температурным изменениям. Свойства добавки: поглощает воду и образовывает вязкую структуру; препятствует
-                            кристаллизации при охлаждении и заморозке; улучшает органолептические характеристики товара; увеличивает объем и эластичность продукта; выполняет роль фиксирующего и связывающего агента; способствует увеличению срока годности.
-                            Е412 используется при производстве следующей продукции: мороженое, охлажденные кондитерские десерты из молочных продуктов; хлебобулочные изделия и выпечка; мясная и колбасная продукция; джемы, варенья, желе; кетчупы, соусы,
-                            майонезы; масло; полуфабрикаты и продукты быстрого приготовления (сухие супы, консервы, пищевые концентраты); соки, концентраты.
+                        <p>
+                            Гуаровую камедь (E-412)- изготавливают из внутренней части семян зернобобовой культуры Cyamopsis tetragonolobus, которую называют Гуаром, Гороховым деревом или Индийской акацией. Гуар произрастает в Пакистане и Индии, на долю которой приходится большая
+                            часть мирового производства Е 412. Для изготовления пищевой добавки механическим путем размалывается эндосперм семян растения.
+                            <br /> Главное свойство гуара (гуаровой камеди) – набухать и создавать очень вязкие растворы в горячей и холодной воде. Вязкость 1% раствора гуаровой камеди составляет от 3 000 до 7 000, дозировка для применения в пищевом производстве
+                            составляет 0,2 - 1% в зависимости от вида продукции. Вязкость раствора гуаровой камеди не изменяется в зависимости от добавления кислот и солей, структура готового продукта стабильная при замораживании и размораживании,что
+                            повышает преимущества применения гуаровой камеди в пищевой промышленности.
                         </p>
                     </div>
                     <button class="accordion"><img src="../src/img/03.png">Корма для животных<img
                     src="../src/img/icon03.png"></button>
                     <div class="panel ">
-                        <p>При использовании во время бурения нефтяных скважин гуаровая камедь предотвращает потерю воды из вязкого бурового раствора и хорошо суспензирует бентонитовую глину, используемую в буровом растворе.
-                            <br> Гуаровая камедь дешевле, чем большинство других загустителей бурового раствора, однако менее термостабильна, чем ксантановая камедь, при температурах выше 100 градусов С. В значительной мере это ограничение удаётся преодолеть
-                            при использовании её гидроксипропильных производных, которые являются более термостабильными.
-                            <br> Для повышения добычи нефти посредством гидравлического разрыва пласта в скважину под давлением закачивают расклинивающее средство, например, песок, суспензированный в загущённом гуаром или гидроксипропилгуаром растворе,
-                            с целью создания и расширения трещин в горных породах и обеспечения просачивания нефти/газа в скважину.
-                            <br> За счёт образования поперечных связей с боратом или ионами переходных металлов, Zr и Ti, часто происходит желатинизация in situ инъецированной гуаровой камеди. После завершения гидравлического разрыва гель разрушают и
-                            вымывают, причём после разрушения остаётся минимальное его количество. Применение в области добычи нефти является одним из основных применений гуаровой камеди.
+                        <p>Гуаровый шрот - содержание белка 44%, 50%, 56%, с высокой степенью перевариваемости. Улучшает пищеварение КРС увеличивает удой и жирность молока. Строгий контроль качества на каждом этапе производства обеспечивает высокое качество
+                            продукции. Гуаровый шрот пригоден к употреблению животными и птицей. Без ГМО.
+                            <br> Гуаровая камедь- является одним из важных ингредиентов, используемых в качестве корма для скота.
+                            <br /> * Гуаровая мука содержит большое количество белка, что увеличивает содержание жира и количество молока.
+                            <br /> * Улучшает пищеварительную систему крупного рогатого скота.
+                            <br /> * Может использoваться на корм в чистом виде или быть частью кормовой смеси.
                         </p>
                     </div>
                 </div>
@@ -178,7 +179,7 @@
                                 <input type="checkbox" checked onchange="document.getElementById('sendNew').disabled = !this.checked;" />
                                 <a class="private-policy" href="src\policy\Политика конфиденциальности.docx">Я согласен (-на) на обработку моих персональных данных</a>
                             </div>
-                            <button class="contacts__button">Отправить</button>
+                            <button class="contacts__button" id="sendNew">Отправить</button>
                         </form>
                     </div>
                     <div class="contacts__img"><img src="../src/img/contacts.png"></div>
@@ -186,6 +187,9 @@
 
             </div>
         </div>
+        <footer>
+
+        </footer>
     </div>
 </body>
 
