--- a/src/index.html
+++ b/src/index.html
@@ -101,7 +101,7 @@
                         </p>
                     </div>
                     <button class="accordion"><img src="../src/img/02.png">Пищевая промышленность<img
-                        src="../src/img/icon02.png"></button>
+                            src="../src/img/icon02.png"></button>
                     <div class="panel ">
                         <p>
                             Гуаровую камедь (E-412)- изготавливают из внутренней части семян зернобобовой культуры Cyamopsis tetragonolobus, которую называют Гуаром, Гороховым деревом или Индийской акацией. Гуар произрастает в Пакистане и Индии, на долю которой приходится большая
@@ -112,7 +112,7 @@
                         </p>
                     </div>
                     <button class="accordion"><img src="../src/img/03.png">Корма для животных<img
-                    src="../src/img/icon03.png"></button>
+                            src="../src/img/icon03.png"></button>
                     <div class="panel ">
                         <p>Гуаровый шрот - содержание белка 44%, 50%, 56%, с высокой степенью перевариваемости. Улучшает пищеварение КРС увеличивает удой и жирность молока. Строгий контроль качества на каждом этапе производства обеспечивает высокое качество
                             продукции. Гуаровый шрот пригоден к употреблению животными и птицей. Без ГМО.
@@ -177,7 +177,8 @@
                             <input type="text" placeholder="Сообщение">
                             <div class="terms">
                                 <input type="checkbox" checked onchange="document.getElementById('sendNew').disabled = !this.checked;" />
-                                <a class="private-policy" href="src\policy\Политика конфиденциальности.docx">Я согласен (-на) на обработку моих персональных данных</a>
+                                <a class="private-policy" href="src\policy\Политика конфиденциальности.docx">Я согласен
+                                    (-на) на обработку моих персональных данных</a>
                             </div>
                             <button class="contacts__button" id="sendNew">Отправить</button>
                         </form>
@@ -187,9 +188,37 @@
 
             </div>
         </div>
-        <footer>
+        <div class="footer__wrapper">
+            <footer class="footer">
+                <div class="footer__logo"><img src="../src/img/footerlogo.png"></div>
+                <div class="footer__contacts">
+                    <ul class="footer__contacts-nav">
+                        <li>
+                            <a href=""><img src="../src/img/iconmap.png">Plot Number: C-80, Marudhar Industial Area,<br/> Basni Phase - ||, Jodhpur - 342005, Rajasthan - INDIA</a>
+                        </li>
+                        <li>
+                            <a href=""><img src="../src/img/iconphone.png"></a>
+                        </li>
+                        <li>
+                            <a href=""><img src="../src/img/iconfax.png"></a>
+                        </li>
+                        <li>
+                            <a href=""><img src="../src/img/iconmail.png"></a>
+                        </li>
+                        <li>
+                            <a href=""><img src="../src/img/iconworld.png"></a>
+                        </li>
+                        <li>
+                            <a href=""></a>
+                        </li>
+                        <li>
+                            <a href=""></a>
+                        </li>
+                    </ul>
+                </div>
+            </footer>
+        </div>
 
-        </footer>
     </div>
 </body>
 
