--- a/src/index.html
+++ b/src/index.html
@@ -197,23 +197,18 @@
                             <a href=""><img src="../src/img/iconmap.png">Plot Number: C-80, Marudhar Industial Area,<br/> Basni Phase - ||, Jodhpur - 342005, Rajasthan - INDIA</a>
                         </li>
                         <li>
-                            <a href=""><img src="../src/img/iconphone.png"></a>
+                            <a href=""><img src="../src/img/iconphone.png">Board Lines: +91-291-2748000 / 2747000</a>
                         </li>
                         <li>
-                            <a href=""><img src="../src/img/iconfax.png"></a>
+                            <a href=""><img src="../src/img/iconfax.png">Fax Number: +91-291-27481000</a>
                         </li>
                         <li>
-                            <a href=""><img src="../src/img/iconmail.png"></a>
+                            <a href=""><img src="../src/img/iconmail.png">sri@sriguargum.com</a>
                         </li>
                         <li>
-                            <a href=""><img src="../src/img/iconworld.png"></a>
+                            <a href=""><img src="../src/img/iconworld.png">www.sriguargum.com</a>
                         </li>
-                        <li>
-                            <a href=""></a>
-                        </li>
-                        <li>
-                            <a href=""></a>
-                        </li>
+
                     </ul>
                 </div>
             </footer>
