--- a/src/index.html
+++ b/src/index.html
@@ -19,12 +19,23 @@
             <div class="logo">
                 <a href="index.html"><img class="logo" src="../src/img/logo.png"></a>
             </div>
-            <nav class="header__nav">
+            <div class="header__nav desktop-nav">
                 <ul>
                     <li><a href="#about" aria-label="about" rel="m_PageScroll2id">О Нас</a></li>
                     <li><a href="#tabs" aria-label="tabs" rel="m_PageScroll2id">Направления</a></li>
                     <li><a href="#price" aria-label="price" rel="m_PageScroll2id">Цены</a></li>
                     <li><a href="#contacts" aria-label="contacts" rel="m_PageScroll2id">Контакты</a></li>
+                </ul>
+            </div>
+            <div class="nav-toggle">
+                <div class="nav-toggle-bar"></div>
+            </div>
+            <nav class="nav">
+                <ul>
+                    <li><a class="header__nav-item active" href="index.html" aria-label="collection">Collection</a></li>
+                    <li><a class="header__nav-item" href="about.html" aria-label="about me">It's me</a></li>
+                    <li><a class="header__nav-item" href="price.html" aria-label="price">Price</a></li>
+                    <li><a class="header__nav-item" href="contacts.html" aria-label="contacts">Contacts</a></li>
                 </ul>
             </nav>
         </header>
